[gd_scene load_steps=12 format=3 uid="uid://sid2ikfh1ui6"]

[ext_resource type="Script" path="res://scripts/BattleScene.gd" id="1_maab4"]
[ext_resource type="Texture2D" uid="uid://c5s4wp6tebjor" path="res://images/enemy_fubura.png" id="2_lysp6"]
[ext_resource type="Texture2D" uid="uid://rthvji11akta" path="res://images/discardZone.png" id="3_2003n"]
[ext_resource type="PackedScene" uid="uid://xwfxfbu6gmk4" path="res://scenes/DeckZone.tscn" id="4_mng8e"]
[ext_resource type="PackedScene" uid="uid://t3n8o5bhk3nb" path="res://scenes/EnemyUI.tscn" id="4_ru16g"]
[ext_resource type="PackedScene" path="res://scenes/GoodsPanel.tscn" id="6_goods"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gh3jm"]
bg_color = Color(0, 0.784314, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_s7lc2"]

[sub_resource type="SystemFont" id="SystemFont_tsbex"]

[sub_resource type="SystemFont" id="SystemFont_22irv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hmjg"]
bg_color = Color(1, 0, 0, 1)

[node name="BattleScene" type="Control"]
custom_minimum_size = Vector2(1000, 650)
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 610.0
script = ExtResource("1_maab4")

[node name="CardContainer" type="VFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -170.0
offset_right = 154.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayerHPBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(300, 30)
layout_mode = 1
offset_right = 300.0
offset_bottom = 30.0
theme_override_styles/fill = SubResource("StyleBoxFlat_gh3jm")
value = 100.0

[node name="PlayerHPLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 52.0
text = "HP: 0 / 0"

[node name="InfoLabel" type="Label" parent="."]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -50.0
offset_right = 500.0
offset_bottom = 50.0
grow_vertical = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="BlockLabel" type="Label" parent="."]
custom_minimum_size = Vector2(120, 40)
layout_mode = 0
offset_top = 70.0
offset_right = 129.0
offset_bottom = 115.0
theme_override_fonts/font = SubResource("SystemFont_s7lc2")
theme_override_font_sizes/font_size = 32
text = "ブロック: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerStatusLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 115.0
offset_right = 200.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 20

[node name="EnergyLabel" type="Label" parent="."]
custom_minimum_size = Vector2(120, 40)
layout_mode = 0
offset_top = 30.0
offset_right = 133.0
offset_bottom = 75.0
theme_override_fonts/font = SubResource("SystemFont_tsbex")
theme_override_font_sizes/font_size = 32
text = "エナジー: 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiscardZone" type="TextureButton" parent="."]
custom_minimum_size = Vector2(60, 80)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_2003n")
ignore_texture_size = true
stretch_mode = 0

[node name="DiscardCountLabel" type="Label" parent="DiscardZone"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = -10.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 26.0
theme_override_fonts/font = SubResource("SystemFont_22irv")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_3hmjg")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeckZone" parent="." instance=ExtResource("4_mng8e")]
layout_mode = 1

[node name="EnemyContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -225.0
offset_right = 550.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="EnemySlot0" type="VBoxContainer" parent="EnemyContainer"]
layout_mode = 2
alignment = 1

[node name="EnemyImage0" type="TextureButton" parent="EnemyContainer/EnemySlot0"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("2_lysp6")
ignore_texture_size = true
stretch_mode = 0

[node name="EnemyUI0" parent="EnemyContainer/EnemySlot0" instance=ExtResource("4_ru16g")]
layout_mode = 2

[node name="EnemySlot1" type="VBoxContainer" parent="EnemyContainer"]
layout_mode = 2
alignment = 1

[node name="EnemyImage1" type="TextureButton" parent="EnemyContainer/EnemySlot1"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("2_lysp6")
ignore_texture_size = true
stretch_mode = 0

[node name="EnemyUI1" parent="EnemyContainer/EnemySlot1" instance=ExtResource("4_ru16g")]
layout_mode = 2

[node name="EnemySlot2" type="VBoxContainer" parent="EnemyContainer"]
layout_mode = 2
alignment = 1

[node name="EnemyImage2" type="TextureButton" parent="EnemyContainer/EnemySlot2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("2_lysp6")
ignore_texture_size = true
stretch_mode = 0

[node name="EnemyUI2" parent="EnemyContainer/EnemySlot2" instance=ExtResource("4_ru16g")]
layout_mode = 2

[node name="EndTurnButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -50.0
offset_right = -100.0
grow_horizontal = 0
grow_vertical = 0
text = "ターン終了"

[node name="PotionContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -235.0
offset_right = -100.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 2

[node name="PotionBtn0" type="Button" parent="PotionContainer"]
visible = false
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
text = "ポーション"

[node name="PotionBtn1" type="Button" parent="PotionContainer"]
visible = false
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
text = "ポーション"

[node name="PotionBtn2" type="Button" parent="PotionContainer"]
visible = false
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
text = "ポーション"

[node name="TalentButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -110.0
offset_right = -100.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
text = "タレント"

[node name="GoodsPanel" parent="." instance=ExtResource("6_goods")]
layout_mode = 0
offset_top = 120.0
offset_right = 200.0
offset_bottom = 120.0

[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="TalentButton" to="." method="_on_TalentButton_pressed"]
