extends Control

@onready var card_container = $CardContainer
@onready var player_hp_bar = $PlayerHPBar
@onready var label = $InfoLabel
@onready var player_block_label = $BlockLabel
@onready var energy_label = $EnergyLabel
@onready var discard_button = $DiscardZone
@onready var discard_label = $DiscardZone/DiscardCountLabel
@onready var deck_button = $DeckZone/DeckImage
@onready var deck_zone := $DeckZone
@onready var enemy_ui = $EnemyUI
@onready var enemy_image = $EnemyImage
@onready var end_turn_button = $EndTurnButton
@onready var talent_button = $TalentButton

const MAX_ENERGY = 3
const MAX_HAND_SIZE = 10

enum TurnState { PLAYER_TURN, ENEMY_TURN, BATTLE_END }
var turn_state: TurnState = TurnState.PLAYER_TURN

var player_hp: int
var player_max_hp: int
var player_block = 0
var player_energy = MAX_ENERGY
var energy_penalty_next_turn = false
var enemy_buff_active = false  # æ•µãƒãƒ•: æ¬¡ã®æ”»æ’ƒ1.5å€

var deck: Array[CardData] = []
var discard_pile: Array[CardData] = []
var card_scene = preload("res://scenes/CardButton.tscn")
var popup_scene = preload("res://scenes/PopupDamage.tscn")

var enemy_data: EnemyData
var enemy_hp: int
var enemy_block = 0
var next_enemy_action = {}

# è¿½åŠ : çµ‚äº†å¤šé‡é˜²æ­¢
var battle_over := false
var talent_used_this_turn := false

func _ready():
	print("ãƒãƒˆãƒ«é–‹å§‹")
	# ã‚­ãƒ£ãƒ©é¸æŠã‚·ãƒ¼ãƒ³ã§è¨­å®šã•ã‚ŒãŸãƒ‡ãƒƒã‚­ã‚’å—ã‘å–ã‚‹
	deck = Global.player_deck.duplicate() as Array[CardData]
	# ãƒ‡ãƒƒã‚­ã‚’ã‚·ãƒ£ãƒƒãƒ•ãƒ«ã™ã‚‹
	deck.shuffle()

	# ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼HPè¨­å®šï¼ˆGlobalã‹ã‚‰å¾©å…ƒï¼‰
	player_max_hp = Global.player_max_hp
	if Global.player_hp > 0:
		player_hp = Global.player_hp
	else:
		player_hp = player_max_hp

	# æ•µãƒ‡ãƒ¼ã‚¿èª­ã¿è¾¼ã¿
	_setup_enemy()

	player_hp_bar.max_value = player_max_hp
	player_hp_bar.value = player_hp

	# ã‚¿ãƒ¬ãƒ³ãƒˆãƒœã‚¿ãƒ³åˆæœŸåŒ–
	if Global.selected_character and talent_button:
		talent_button.text = Global.selected_character.talent_name

	setup_buttons()
	start_player_turn()
	# ã‚°ãƒƒã‚ºåŠ¹æœ: battle_startï¼ˆstart_player_turn ã®åˆæœŸåŒ–å¾Œã«é©ç”¨ï¼‰
	_apply_goods_effects("battle_start", null)
	update_ui()

func _setup_enemy():
	# Global.current_enemy_id ãŒè¨­å®šã•ã‚Œã¦ã„ã‚Œã°ãã‚Œã‚’ä½¿ã†
	if Global.current_enemy_id != "":
		enemy_data = EnemyLoader.get_enemy_by_id(Global.current_enemy_id)

	# IDãŒæœªè¨­å®š or è¦‹ã¤ã‹ã‚‰ãªã„å ´åˆã¯ã‚¹ãƒ†ãƒ¼ã‚¸ã«å¿œã˜ã¦ãƒ©ãƒ³ãƒ€ãƒ é¸æŠ
	if enemy_data == null:
		var stage = _get_current_stage_number()
		var is_boss = Global.is_boss_stage()
		enemy_data = EnemyLoader.get_random_enemy_for_stage(stage, is_boss)

	if enemy_data == null:
		push_error("æ•µãƒ‡ãƒ¼ã‚¿ãŒè¦‹ã¤ã‹ã‚Šã¾ã›ã‚“ã€‚ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆæ•µã‚’ä½¿ç”¨ã—ã¾ã™ã€‚")
		enemy_data = EnemyData.new()
		enemy_data.id = "default"
		enemy_data.name = "ã‚¹ãƒ©ã‚¤ãƒ "
		enemy_data.hp = 20
		enemy_data.image_path = "res://images/enemy_fubura.png"
		enemy_data.actions = [{"type": "attack", "power": 6, "weight": 1}]

	enemy_hp = enemy_data.hp
	enemy_ui.initialize_hp(enemy_data.hp)
	enemy_ui.set_enemy_name(enemy_data.name)

	# æ•µç”»åƒã‚»ãƒƒãƒˆ
	if ResourceLoader.exists(enemy_data.image_path):
		enemy_image.texture = load(enemy_data.image_path)

func _get_current_stage_number() -> int:
	# ãƒãƒ¼ãƒ‰IDã‹ã‚‰éšå±¤ç•ªå·ã‚’å–å¾—ï¼ˆä¾‹: "2-A" â†’ 2, "10-A" â†’ 10ï¼‰
	var node_id = Global.current_node_id
	var num_str := ""
	for i in range(node_id.length()):
		if node_id[i].is_valid_int():
			num_str += node_id[i]
		else:
			break
	if num_str != "":
		return int(num_str)
	return 1

func setup_buttons():
	discard_button.pressed.connect(_on_DiscardZone_pressed)
	deck_button.pressed.connect(_on_DeckZone_pressed)

func update_ui():
	player_block_label.text = "ãƒ–ãƒ­ãƒƒã‚¯: %d" % player_block
	energy_label.text = "ã‚¨ãƒŠã‚¸ãƒ¼: %d" % player_energy
	enemy_ui.set_block(enemy_block)
	_update_end_turn_button()
	_update_talent_button()

func _update_end_turn_button():
	if end_turn_button:
		end_turn_button.disabled = turn_state != TurnState.PLAYER_TURN

func draw_cards(count):
	print("draw_cards", str(deck.size()))
	for i in range(count):
		if card_container.get_child_count() >= MAX_HAND_SIZE:
			return
		if deck.is_empty():
			reshuffle_deck()
		if deck.is_empty():
			return
		var card_data = deck.pop_front()
		send_deck_to_zone()
		deck_zone.update_deck_count()
		var card = card_scene.instantiate()

		card.update_card_display(card_data)

		card.use_card.connect(_on_card_used)
		card_container.add_child(card)

func reshuffle_deck():
	deck = discard_pile.duplicate() as Array[CardData]
	discard_pile.clear()
	discard_label.text = str(discard_pile.size())
	deck.shuffle()

func decide_enemy_action():
	if enemy_data == null or enemy_data.actions.is_empty():
		next_enemy_action = {"type": "attack", "power": 6}
		enemy_ui.set_intent(next_enemy_action)
		return

	# é‡ã¿ä»˜ããƒ©ãƒ³ãƒ€ãƒ é¸æŠ
	var total_weight = 0
	for action in enemy_data.actions:
		total_weight += action.get("weight", 1)

	var roll = randi() % total_weight
	var cumulative = 0
	for action in enemy_data.actions:
		cumulative += action.get("weight", 1)
		if roll < cumulative:
			next_enemy_action = action.duplicate()
			break

	enemy_ui.set_intent(next_enemy_action)

func Discard_update(card):
	discard_pile.append(card.card_data)
	discard_label.text = str(discard_pile.size())

func _on_card_used(card):
	if not is_player_turn():
		return

	if card.cost > player_energy:
		label.text = "ã‚¨ãƒŠã‚¸ãƒ¼ãŒè¶³ã‚Šãªã„ï¼"
		return

	player_energy -= card.cost
	card_container.remove_child(card)
	Discard_update(card)

	match card.effect_type:
		"attack":
			var dealt = card.power + Global.player_atk_bonus
			label.text = "æ”»æ’ƒã‚«ãƒ¼ãƒ‰ä½¿ç”¨: %d ãƒ€ãƒ¡ãƒ¼ã‚¸ï¼" % dealt
			apply_damage_to_enemy(dealt)
		"self_attack":
			var dealt = card.power + Global.player_atk_bonus
			apply_damage_to_enemy(dealt)
			apply_damage(5)
			label.text = "æ¨ã¦èº«ï¼ %dãƒ€ãƒ¡ãƒ¼ã‚¸ï¼ åå‹•ã§5ãƒ€ãƒ¡ãƒ¼ã‚¸ï¼" % dealt
		"multi_attack":
			var hit_dmg = card.power + Global.player_atk_bonus
			for i in range(3):
				apply_damage_to_enemy(hit_dmg)
				if battle_over:
					break
			label.text = "é€£æ’ƒï¼ %dÃ—3 ãƒ€ãƒ¡ãƒ¼ã‚¸ï¼" % hit_dmg
		"block":
			player_block += card.power
			label.text = "é˜²å¾¡ã‚«ãƒ¼ãƒ‰ä½¿ç”¨: ãƒ–ãƒ­ãƒƒã‚¯ +%d" % card.power
		"energy":
			player_energy = min(player_energy + card.power, MAX_ENERGY)
			label.text = "ã‚¨ãƒŠã‚¸ãƒ¼å›å¾©: +%d" % card.power
		"energy_burst":
			player_energy += card.power
			energy_penalty_next_turn = true
			label.text = "è¦šé†’ï¼ ã‚¨ãƒŠã‚¸ãƒ¼ +%dï¼ˆæ¬¡ã‚¿ãƒ¼ãƒ³-1ï¼‰" % card.power
		"draw":
			draw_cards(card.power)
			label.text = "ãƒ‰ãƒ­ãƒ¼ï¼ %dæšå¼•ã„ãŸï¼" % card.power
		"heal":
			player_hp = min(player_hp + card.power, player_max_hp)
			player_hp_bar.value = player_hp
			label.text = "å›å¾©ï¼ HP +%d" % card.power

	# ã‚°ãƒƒã‚ºåŠ¹æœ: on_tagged_cardï¼ˆæ¨ã—ã‚¿ã‚°ã‚«ãƒ¼ãƒ‰ä½¿ç”¨æ™‚ï¼‰
	_apply_goods_effects("on_tagged_card", card)

	update_ui()
	card.queue_free()

func apply_damage_to_enemy(amount):
	var blocked = min(enemy_block, amount)
	var actual = amount - blocked
	enemy_block -= blocked
	enemy_hp = max(enemy_hp - actual, 0)
	enemy_ui.set_hp(enemy_hp)
	show_popup_damage(actual)

	check_battle_result()

func _on_EndTurnButton_pressed():
	if not is_player_turn():
		return

	end_player_turn()
	await play_enemy_turn()
	if battle_over or not is_inside_tree():
		return
	if turn_state != TurnState.BATTLE_END:
		start_player_turn()

func is_player_turn() -> bool:
	return turn_state == TurnState.PLAYER_TURN

func end_player_turn():
	turn_state = TurnState.ENEMY_TURN
	label.text = "ã‚¿ãƒ¼ãƒ³çµ‚äº†â€¦ æ•µã®è¡Œå‹•ä¸­..."
	_update_end_turn_button()
	for card in card_container.get_children():
		discard_pile.append(card.card_data)
		card.queue_free()

func start_player_turn():
	turn_state = TurnState.PLAYER_TURN
	talent_used_this_turn = false
	player_block = 0
	player_energy = MAX_ENERGY - 1 if energy_penalty_next_turn else MAX_ENERGY
	energy_penalty_next_turn = false
	decide_enemy_action()
	draw_cards(3)

	# ã‚°ãƒƒã‚ºåŠ¹æœ: turn_start
	_apply_goods_effects("turn_start", null)

	update_ui()
	label.text = "ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã®ã‚¿ãƒ¼ãƒ³ï¼ã‚«ãƒ¼ãƒ‰ã‚’é¸ã‚“ã§ãã ã•ã„"

func play_enemy_turn():
	await get_tree().create_timer(1.0).timeout
	if battle_over or not is_inside_tree():
		return

	match next_enemy_action.get("type", ""):
		"attack":
			var damage = next_enemy_action.power
			if enemy_buff_active:
				damage = int(damage * 1.5)
				enemy_buff_active = false
			apply_damage(damage)
			if battle_over or not is_inside_tree():
				return
			label.text = "%sã®æ”»æ’ƒï¼ %d ãƒ€ãƒ¡ãƒ¼ã‚¸ï¼" % [enemy_data.name, damage]

		"multi_attack":
			var hits = next_enemy_action.get("times", 2)
			var dmg = next_enemy_action.power
			if enemy_buff_active:
				dmg = int(dmg * 1.5)
				enemy_buff_active = false
			for i in range(hits):
				await get_tree().create_timer(0.3).timeout
				if battle_over or not is_inside_tree():
					return
				apply_damage(dmg)
				if battle_over or not is_inside_tree():
					return
			label.text = "%sã®é€£ç¶šæ”»æ’ƒï¼" % enemy_data.name

		"buff":
			enemy_buff_active = true
			label.text = "%sã¯åŠ›ã‚’æºœã‚ã¦ã„ã‚‹â€¦æ¬¡ã®æ”»æ’ƒãŒå¼·åŒ–ï¼" % enemy_data.name

		"debuff":
			energy_penalty_next_turn = true
			label.text = "%sã®é‚ªæ‚ªãªæ°—é…â€¦ æ¬¡ã‚¿ãƒ¼ãƒ³ã®ã‚¨ãƒŠã‚¸ãƒ¼ãŒæ¸›å°‘ï¼" % enemy_data.name
		"block":
			var gain = next_enemy_action.get("power", 0)
			enemy_block += gain
			label.text = "%sã¯é˜²å¾¡ã‚’å›ºã‚ãŸï¼ˆãƒ–ãƒ­ãƒƒã‚¯ +%dï¼‰" % [enemy_data.name, gain]

	if battle_over or not is_inside_tree():
		return
	update_ui()

func apply_damage(amount):
	var blocked = min(player_block, amount)
	var dmg = amount - blocked
	player_block -= blocked
	player_hp = max(player_hp - dmg, 0)
	player_hp_bar.value = player_hp
	print("è¢«ãƒ€ãƒ¡: %d (ãƒ–ãƒ­ãƒƒã‚¯: %d â†’ %d), æ®‹HP: %d" % [amount, blocked, player_block, player_hp])

	check_battle_result()

func _on_DiscardZone_pressed():
	var popup = preload("res://scenes/DiscardPopup.tscn").instantiate()
	add_child(popup)
	await get_tree().process_frame
	popup.show_discard(discard_pile)

func _on_DeckZone_pressed():
	deck_zone.show_deck_popup()

func send_deck_to_zone():
	if deck_zone and deck_zone.has_method("set_cards"):
		deck_zone.set_cards(deck)
	else:
		push_error("DeckZoneãŒè¦‹ã¤ã‹ã‚‰ãªã„ã€ã¾ãŸã¯ set_cards ãŒå®šç¾©ã•ã‚Œã¦ã„ã¾ã›ã‚“")

func show_popup_damage(amount: int):
	var popup = popup_scene.instantiate()
	add_child(popup)
	popup.global_position = enemy_image.global_position
	popup.show_damage(amount)

func check_battle_result():
	if enemy_hp <= 0:
		on_victory()
	elif player_hp <= 0:
		on_defeat()

func on_victory():
	if battle_over:
		return
	battle_over = true
	turn_state = TurnState.BATTLE_END
	_update_end_turn_button()

	# ã‚°ãƒƒã‚ºåŠ¹æœ: battle_end
	_apply_goods_effects("battle_end", null)

	# HPã‚’Globalã«æ›¸ãæˆ»ã—
	Global.player_hp = player_hp

	if Global.is_boss_stage():
		print("å‹åˆ©ï¼ãƒœã‚¹æˆ¦ãªã®ã§ã‚²ãƒ¼ãƒ ã‚¯ãƒªã‚¢ã¸")
		get_tree().change_scene_to_file("res://scenes/GameClear.tscn")
	else:
		print("å‹åˆ©ï¼å ±é…¬ç”»é¢ã¸")
		get_tree().change_scene_to_file("res://scenes/RewardScene.tscn")


func on_defeat():
	if battle_over:
		return
	battle_over = true
	turn_state = TurnState.BATTLE_END
	_update_end_turn_button()

	print("æ•—åŒ—ï¼ã‚²ãƒ¼ãƒ ã‚ªãƒ¼ãƒãƒ¼ç”»é¢ã¸")
	get_tree().change_scene_to_file("res://scenes/GameOver.tscn")


# === ã‚¿ãƒ¬ãƒ³ãƒˆï¼ˆå›ºæœ‰ã‚¹ã‚­ãƒ«ï¼‰ ===

func _on_TalentButton_pressed():
	if not is_player_turn() or talent_used_this_turn or battle_over:
		return

	var cost = _get_talent_cost()
	if player_energy < cost:
		label.text = "ã‚¨ãƒŠã‚¸ãƒ¼ãŒè¶³ã‚Šãªã„ï¼"
		return

	if not Global.selected_character:
		return

	player_energy -= cost
	talent_used_this_turn = true

	match Global.selected_character.id:
		"lui":  # é·¹ã®çœ¼: 3ãƒ€ãƒ¡Ã—3å›
			for i in range(3):
				apply_damage_to_enemy(3)
				if battle_over:
					break
			label.text = "é·¹ã®çœ¼ï¼ 3Ã—3 = 9ãƒ€ãƒ¡ãƒ¼ã‚¸ï¼"
		"miko":  # ã‚¨ãƒªãƒ¼ãƒˆå·«å¥³ãƒ“ãƒ¼ãƒ : 6ãƒ€ãƒ¡ãƒ¼ã‚¸
			apply_damage_to_enemy(6)
			label.text = "ã‚¨ãƒªãƒ¼ãƒˆå·«å¥³ãƒ“ãƒ¼ãƒ ï¼ 6ãƒ€ãƒ¡ãƒ¼ã‚¸ï¼"
		"suisei":  # ã‚¹ã‚¿ãƒ¼ãƒ€ã‚¹ãƒˆãƒ–ãƒ¬ã‚¤ã‚¯: 15ãƒ€ãƒ¡ãƒ¼ã‚¸
			apply_damage_to_enemy(15)
			label.text = "ã‚¹ã‚¿ãƒ¼ãƒ€ã‚¹ãƒˆãƒ–ãƒ¬ã‚¤ã‚¯ï¼ 15ãƒ€ãƒ¡ãƒ¼ã‚¸ï¼"

	update_ui()

func _get_talent_cost() -> int:
	if Global.selected_character and Global.selected_character.id == "suisei":
		return 2
	return 1

func _update_talent_button():
	if not talent_button:
		return
	talent_button.disabled = (
		turn_state != TurnState.PLAYER_TURN
		or talent_used_this_turn
		or battle_over
		or player_energy < _get_talent_cost()
	)


# === ã‚°ãƒƒã‚ºï¼ˆãƒ‘ãƒƒã‚·ãƒ–åŠ¹æœï¼‰ ===

func _apply_goods_effects(trigger: String, card) -> void:
	var char_tag := ""
	if Global.selected_character:
		char_tag = Global.selected_character.tag

	for goods in Global.player_goods:
		if goods.trigger != trigger:
			continue

		# on_tagged_card: æ¨ã—ã‚¿ã‚°ã‚’æŒã¤ã‚«ãƒ¼ãƒ‰ä½¿ç”¨æ™‚ã®ã¿ç™ºå‹•
		if trigger == "on_tagged_card":
			if card == null or not card.card_data.has_tag(char_tag):
				continue

		match goods.effect:
			"heal":
				player_hp = min(player_hp + goods.value, player_max_hp)
				player_hp_bar.value = player_hp
				print("ğŸ ã‚°ãƒƒã‚º[%s]: HP +%d" % [goods.name, goods.value])
			"block":
				player_block += goods.value
				print("ğŸ ã‚°ãƒƒã‚º[%s]: ãƒ–ãƒ­ãƒƒã‚¯ +%d" % [goods.name, goods.value])
			"energy":
				player_energy += goods.value
				print("ğŸ ã‚°ãƒƒã‚º[%s]: ã‚¨ãƒŠã‚¸ãƒ¼ +%d" % [goods.name, goods.value])
			"gold":
				Global.player_gold += goods.value
				print("ğŸ ã‚°ãƒƒã‚º[%s]: ã‚´ãƒ¼ãƒ«ãƒ‰ +%d" % [goods.name, goods.value])
